--- a/scss/blocks/_live-typing.scss
+++ b/scss/blocks/_live-typing.scss
@@ -73,6 +73,10 @@
   }
 }
 
+.typed-name span {
+  letter-spacing: -0.04em;
+}
+
 .typed-description {
   line-height: 100%;
   margin-bottom: rem(30);
